# sidest-backend

./: .env.example  .gitignore  AI_CONTEXT.md  ANALYTICS_PLAN.md  AUDIT_REPORT.md  CLAUDE.md  PLAN.md  README.md  V2-REMOVAL-PLAN.md  V2_BACKEND_REFERENCE.md  audit-2026-05-04-auth-policy-coverage.md  audit-2026-05-05-analytics-rebuild-plan-v3.md  audit-2026-05-05-void-expired-payouts-job.md  audit-2026-05-06-scaling-antipatterns.md  audit-2026-05-07-caching-foundation.md  audit-2026-05-07-perf-middleware-hot-reads.md  audit-2026-05-08-bloat-1-schema-models.md  audit-2026-05-08-bloat-2-services-core.md  audit-2026-05-08-bloat-3-services-support.md  audit-2026-05-08-bloat-4-jobs-actions-observers.md  audit-2026-05-09-schema-bloat.md  audit-drafts-1777977050.md  audit-drafts-1778075044.md  audit-drafts-1778243802.md  audit-prompt.txt  checklist-external.md  composer.json  drafts-1778243795.md  drafts-1778243797.md  drafts-1778243800.md  drafts-1778245409.md  hydrogen-oxygen-migration-audit.md  overnight.sh  package-lock.json  phpunit.xml  pilot-manual-queue.md  pilot-stage-1.md  pilot-stage-2.md  pilot-stage-3.md  supabaseDatabase.md  (+1 more)
tools/audit-orchestrator/: .gitignore  README.md  pyproject.toml
tools/audit-orchestrator/audit_orchestrator/: __init__.py  __main__.py  classifier.py  cli.py  completion.py  config.py  git_utils.py  models.py  notifications.py  parser.py  prompts.py  queue_ops.py  runner.py  state.py  stream_parser.py
tools/audit-orchestrator/tests/: conftest.py  test_classifier.py  test_cli_add.py  test_cli_smoke.py  test_cli_sources.py  test_cli_status.py  (+13 more)
(+1927 files in other folders)
