[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "audit-orchestrator"
version = "0.1.0"
description = "TUI for running unattended Claude Code fix sessions across audit checklists"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "textual>=0.50",
    "pyyaml>=6.0",
    "watchdog>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "ruff>=0.4",
]

[project.scripts]
audit = "audit_orchestrator.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["audit_orchestrator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
